2008-02-07  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil/MethodDefinition.cs:
		add last Is method for semantics property.

2008-02-05  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil/TypeDefinition.cs:
		System.Enum by itself is not a value type.
		Fix #351879.

	* Mono.Cecil.Signatures/SignatureReader.cs:
		Properly read fnptr local variables. Fix #358507.

	* Mono.Cecil.Binary/DefaultImporter.cs:
		Import modifiers and sentinels, patch from:
		Andrea Carlo Ornstein <andrea.ornstein@st.com>

2008-02-04  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil.Binary/CLIHeader.cs
	  Mono.Cecil.Binary/ImageWriter.cs
	  Mono.Cecil.Metadata/MetadataWriter.cs:
		emit the proper cli header version for 1.1 and 2.0 cases.

	* Mono.Cecil.Cil/CilWorker.cs: add callsite overloads.

2008-01-10  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil/ReflectionHelper.cs: deal with complex arrays.

2008-01-07  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil.Cil/CilWorker.cs:
		Allow ldarg.s/ldloc.s/stloc.s to take a byte
		instead of the actual parameter or variable. Fix #350606.

2008-01-07  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil/ArrayType.cs:
		Add a constructor with the array rank. Fix #351924.
		Based on a patch by Rolf Kvinge <rkvinge@novell.com>.

2008-01-04  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil.Cil/CilWorker.cs:
		Allow ldarg/ldloc/stloc to take a integer
		instead of the actual parameter or variable. Fix #350606.

2008-01-04  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil/DefaultImporter.cs:
	  Mono.Cecil/ReflectionHelper.cs:
		Properly import nested types. Fix #351133.

2008-01-03  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil/ReflectionWriter.cs:
		Properly emit null type constants. Fix #351141.
		Patch by Rolf Kvinge <rkvinge@novell.com>.

2007-12-30  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil.Cil/CilWorker.cs:
		Check for null arguments. Fix #350857.

2007-12-21  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil/ReflectionReader.cs
	  Mono.Cecil/AggressiveReflectionReader.cs